refactor: replace hard coded user loading